--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "tailwind-merge": "^2.1.0"
     },
     "devDependencies": {
+        "@types/html2canvas": "^1.0.0",
+        "@types/jspdf": "^2.0.0",
         "@types/node": "^20.10.0",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
