--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.39.0",
+        "@types/leaflet": "^1.9.21",
         "clsx": "^2.0.0",
         "date-fns": "^3.0.0",
         "html2canvas": "^1.4.1",
         "jspdf": "^4.0.0",
         "jspdf-autotable": "^5.0.7",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.300.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-leaflet": "^5.0.0",
         "react-router-dom": "^6.21.0",
         "recharts": "^2.10.0",
         "sonner": "^1.3.0",
