feat: rename project to 9M2PJU NCS Center and update branding

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ncs-dashboard-vite",
+    "name": "9m2pju-ncs-center",
     "private": true,
     "version": "4.3.0",
     "type": "module",
