--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.39.0",
         "@types/leaflet": "^1.9.21",
+        "@types/react-leaflet": "^2.8.3",
         "clsx": "^2.0.0",
         "date-fns": "^3.0.0",
         "html2canvas": "^1.4.1",
