--- a/package.json
+++ b/package.json
@@ -1,44 +1,39 @@
 {
-    "name": "9m2pju-ncs-center",
-    "private": true,
-    "version": "4.3.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@supabase/supabase-js": "^2.39.0",
-        "@types/leaflet": "^1.9.21",
-        "@types/react-leaflet": "^2.8.3",
-        "clsx": "^2.0.0",
-        "date-fns": "^3.0.0",
-        "html2canvas": "^1.4.1",
-        "jspdf": "^4.0.0",
-        "jspdf-autotable": "^5.0.7",
-        "leaflet": "^1.9.4",
-        "lucide-react": "^0.300.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-leaflet": "^4.2.1",
-        "react-router-dom": "^6.21.0",
-        "recharts": "^2.10.0",
-        "sonner": "^1.3.0",
-        "tailwind-merge": "^2.1.0"
-    },
-    "devDependencies": {
-        "@types/html2canvas": "^1.0.0",
-        "@types/jspdf": "^2.0.0",
-        "@types/node": "^20.10.0",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.16",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.8"
-    }
+  "name": "temp_next_app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.93.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.563.0",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "recharts": "^3.7.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
 }
