chore: rename project to 9M2PJU NCS Center and improve error handling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "9m2pju-ncs-dashboard",
+  "name": "9m2pju-ncs-center",
   "private": true,
   "version": "0.1.0",
   "type": "module",
