--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -16,7 +14,7 @@ services:
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-ncs_user}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-ncs_user} -d ${POSTGRES_DB:-ncs_database}" ]
       interval: 10s
       timeout: 5s
       retries: 5
